--- a/src/stylesheets/sections/main-carousel.scss
+++ b/src/stylesheets/sections/main-carousel.scss
@@ -117,6 +117,7 @@
     margin-right: 0;
     margin-top: 2%;
     margin-bottom: 5%;
+    z-index: 10;
 
     li {
       width: 4px;
