--- a/src/stylesheets/sections/news-carousel.scss
+++ b/src/stylesheets/sections/news-carousel.scss
@@ -5,6 +5,7 @@
       margin: 0;
       justify-content: flex-end;
       position: relative;
+      z-index: 10;
 
       li {
         font-size: em(14);
